--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="msapplication-wide310x150logo" content="assets/favicons/widetile-310x150.png">
 <meta name="msapplication-square310x310logo" content="assets/favicons/largetile-310x310.png">
 
-<!-- 
+
 <!-- Custom theme styles -->
     <style>
         /**
@@ -65,7 +65,7 @@
             font-style: bold !important;
         }
     </style>
--->
+
 
 </head>
 <body>
@@ -73,12 +73,12 @@
   <div id="app"></div>
   <script>
     window.$docsify = {
-      name: 'Dorset HealthCare Digital Minimum Requirements',
-      repo: 'digitaldhc/digital-minimum-requirements',
-      homepage: 'README.md',
+      name: 'Dorset HealthCare penguins test',
+      repo: 'digitaldhc/frontend-sandpit',
+      homepage: 'readme.md',
       auto2top: true,
       logo: '/_assets/dhc-logo.png',
-      loadSidebar: true,
+      loadSidebar: false,
             alias: {
                '/.*/_sidebar.md': '/_sidebar.md' // use the same sidebar everywhere
             }
