--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <!-- Custom theme styles -->
-    <style>
+    <!-- <style>
         /**
          * https://service-manual.nhs.uk/design-system/styles/typography 
          * https://jhildenbiddle.github.io/docsify-themeable
@@ -64,7 +64,7 @@
         #_n4w5lqkr2 > tbody > tr > td:nth-child(1) {
             font-style: bold !important;
         }
-    </style>
+    </style> -->
 
 
 </head>
