--- a/index2.html
+++ b/index2.html
@@ -78,11 +78,7 @@
       repo: 'digitaldhc/frontend-sandpit',
       homepage: 'readme.md',
       auto2top: true,
-      logo: '/_assets/dhc-logo.png',
-      loadSidebar: false,
-            alias: {
-               '/.*/_sidebar.md': '/_sidebar.md' // use the same sidebar everywhere
-            }
+      logo: '/_assets/dhc-logo.png'
     }
   </script>
   <!-- Docsify v4 -->
